# llmfit

./: Cargo.toml  README.md  output.cast
llmfit-tui/: Cargo.toml
scripts/: install-openclaw-skill.sh
skills/llmfit-advisor/: SKILL.md
